tests/language_tests/pass/0045_print_logical_truthiness.ee
fn main() {
    print(1 && true);
    print(0 || true);
    print(nothing || false);
}
