tests/language_tests/fail/0100_pop_non_array.ee
fn main() {
    pop(1);
}
